[package]
name = "randomx-rust-wrapper"
version = "0.1.3"
description = "RandomX Rust wrapper intended for Fluence Capacity Commitment prover and verifier"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/randomx-rust-wrapper"
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
bitflags = "2.4.1"
libc = "0.2"
thiserror = "1.0"

[dev-dependencies]
rand = "0.8"

[build-dependencies]
cmake = "0.1"
