[package]
name = "randomx-rust-wrapper"
version = "0.4.1"
description = "RandomX Rust wrapper intended for Fluence Capacity Commitment prover and verifier"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/randomx-rust-wrapper"
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
bitflags = "2.4"
hex = "0.4"
libc = "0.2"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"

[build-dependencies]
cmake = "0.1"
