[workspace]
resolver = "2"
members = [
    "crates/types",
    "wrapper",
]

[workspace.dependencies]
randomx-rust-wrapper-types = { path = "./crates/types", version = "0.1.0" }

bitflags = "2.4"
cmake = "0.1"
rand = "0.8"
hex = "0.4"
libc = "0.2"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
