[package]
name = "ccp-ironlight"
version = "0.1.0"
description = "RandomX interpreted Light mode re-written in Rust with built-in ZKP execution proving"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/randomx-rust-wrapper"
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-randomx-types = { workspace = true }
ccp-randomx = { workspace = true }

bitflags = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }

p3-air = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-field = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-matrix = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-mersenne-31 = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4" }
p3-util = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-baby-bear = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4" }
p3-challenger = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-circle = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-commit = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-dft = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-fri = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-keccak = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-mds = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-merkle-tree = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4" }
p3-poseidon = { git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-poseidon2 = { git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-symmetric = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4"}
p3-uni-stark = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4" }
p3-bn254-fr = {git= "https://github.com/Plonky3/Plonky3.git", branch = "sp1-v4" }

sp1-primitives = { git = "https://github.com/fluencelabs/sp1.git", branch = "fluence-v3.3.0" }
sp1-stark = { git = "https://github.com/fluencelabs/sp1.git", branch = "fluence-v3.3.0" }
sp1-prover = { git = "https://github.com/fluencelabs/sp1.git", branch = "fluence-v3.3.0" }
sp1-core-executor = { git = "https://github.com/fluencelabs/sp1.git", branch = "fluence-v3.3.0"  }
sp1-core-machine = { git = "https://github.com/fluencelabs/sp1.git", branch = "fluence-v3.3.0"  }
sp1-sdk = { git = "https://github.com/fluencelabs/sp1.git", branch = "fluence-v3.3.0" }

hashbrown = "0.14.5"
serde_json = "1.0.133"

# TMP
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[dev-dependencies]
rand = { workspace = true }

[build-dependencies]
cmake = { workspace = true }
