[package]
name = "ccp-ironlight"
version = "0.1.0"
description = "RandomX interpreted Light mode re-written in Rust with built-in ZKP execution proving"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/randomx-rust-wrapper"
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
ccp-randomx-types = { workspace = true }
ccp-randomx = { workspace = true }

bitflags = { workspace = true }
hex = { workspace = true }
libc = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }

p3-air = {path = "../../Plonky3/air" }
p3-field = {path = "../../Plonky3/field" }
p3-matrix = {path = "../../Plonky3/matrix" }
p3-mersenne-31 = {path = "../../Plonky3/mersenne-31" }
p3-util = {path = "../../Plonky3/util" }
p3-baby-bear = {path = "../../Plonky3/baby-bear" }
p3-challenger = {path = "../../Plonky3/challenger" }
p3-circle = {path = "../../Plonky3/circle" }
p3-commit = {path = "../../Plonky3/commit" }
p3-dft = {path = "../../Plonky3/dft" }
p3-fri = {path = "../../Plonky3/fri" }
# p3-blake3 = {path = "..//" }
p3-keccak = {path = "../../Plonky3/keccak" }
p3-mds = {path = "../../Plonky3/mds" }
p3-merkle-tree = {path = "../../Plonky3/merkle-tree" }
p3-poseidon = { path = "../../Plonky3/poseidon" }
p3-poseidon2 = { path = "../../Plonky3/poseidon2" }
p3-symmetric = {path = "../../Plonky3/symmetric" }
p3-uni-stark = {path = "../../Plonky3/uni-stark" }
p3-bn254-fr = {path = "../../Plonky3/bn254-fr" }

sp1-primitives = { version = "3.3.0", path = "../../sp1/crates/primitives" }
sp1-stark = { version = "3.3.0", path = "../../sp1/crates/stark" }
sp1-prover = { version = "3.3.0", path = "../../sp1/crates/prover" }
sp1-core-executor = { version = "3.3.0", path = "../../sp1/crates/core/executor" }
sp1-core-machine = { version = "3.3.0", path = "../../sp1/crates/core/machine" }
sp1-sdk = { version = "3.3.0", path = "../../sp1/crates/sdk" }

hashbrown = "0.14.5"
serde_json = "1.0.133"

# TMP
tracing-subscriber = { version = "0.3.17", features = ["std", "env-filter"] }
tracing-forest = { version = "0.1.6", features = ["ansi", "smallvec"] }

[dev-dependencies]
rand = { workspace = true }

[build-dependencies]
cmake = { workspace = true }
