[package]
name = "randomx-types"
version = "0.1.0"
description = "RandomX Rust wrapper common types intended for Fluence Capacity Commitment prover and verifier"
authors = ["Fluence Labs"]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/randomx-rust-wrapper"
publish = true

[lib]
path = "src/lib.rs"
doctest = false

[dependencies]
hex = "0.4"
# thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
