[package]
name = "randomx-rust-wrapper-types"
version = "0.1.0"
description = "Types for Fluence RandomX Rust wrapper"
edition = "2021"
authors = ["Fluence Labs"]
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/randomx-rust-wrapper"
publish = true

[dependencies]
hex = { workspace = true }
serde = { workspace = true }
